[workspace]
members = [
  "rbe01",
  "rbe01-1",
  "rbe01-2",
  "rbe01-2-1",
  "rbe01-2-2",
  "rbe01-2-2-1",
  "rbe01-2-3",
  "rbe02",
  "rbe02-1",
  "rbe02-2",
  "rbe02-3",
  "rbe03-1",
  "rbe03-2",
  "rbe03-2-1",
  "rbe03-2-2",
  "rbe03-2-3",
  "rbe03-3",
  "rbe04",
  "rbe04-1",
  "rbe04-2",
  "rbe04-3",
  "rbe04-4",
  "rbe05-1",
  "rbe05-2",
  "rbe05-3",
  "rbe05-4",
  "rbe06-1",
  "rbe06-2",
  "rbe06-3",
  "rbe07",
  "rbe08-1",
  "rbe08-2",
  "rbe08-2-1",
  "rbe08-2-2",
  "rbe08-3",
  "rbe08-4",
  "rbe08-5",
  "rbe08-5-1-1",
  "rbe08-5-1-2",
  "rbe08-5-1-3",
  "rbe08-5-1-4",
  "rbe08-5-2",
  "rbe08-5-3",
  "rbe08-6",
  "rbe08-7",
  "rbe09",
  "rbe09-1",
  "rbe09-2",
  "rbe09-2-1",
  "rbe09-2-2",
  "rbe09-2-3",
  "rbe09-2-4",
  "rbe09-2-5",
  "rbe09-2-6-1",
  "rbe09-2-6-2",
  "rbe09-3",
  "rbe09-4",
  "rbe10-1",
  "rbe10-2",
  "rbe10-3",
  "rbe10-4",
  "rbe10-5",
  "rbe13-1",
  "rbe13-2",
  "rbe13-3",
  "rbe13-3-1",
  "rbe14",
  "rbe14-1",
  "rbe14-2",
  "rbe14-3",
  "rbe14-4",
  "rbe14-4-1",
  "rbe14-5",
  "rbe14-6",
  "rbe14-7",
  "rbe14-8-1",
  "rbe14-8-2",
  "rbe14-9",
  "rbe14-9-1",
]
